--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -32,7 +32,7 @@
     <div>
         <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
         Features enabled: sorting, filtering (using both in-grid and external controls), sync with browser URLs, pagination and items-per-page functionality.
-        Angular UI Datepickers used for date controls, although you can use any other framework / plugins.
+        Angular UI Datepicker used for date controls, although you can use any other framework, plugin or styling.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
     <hr>
