optimize tablet view

--- a/demo/material/index.html
+++ b/demo/material/index.html
@@ -45,7 +45,7 @@
                        target="_blank">Project GitHub</a></p>
             </div>
             <hr>
-            <div layout-gt-sm="row" layout-sm="column" layout-align="stretch center">
+            <div layout-gt-xs="row" layout-xs="column" layout-align="stretch center">
                 <div  layout="row" layout-align="center start">
                     <md-input-container md-no-float md-is-error="false" class="md-block flex-gt-xs flex-xs">
                         <input ng-model="code"
