--- a/demo/material/index.html
+++ b/demo/material/index.html
@@ -167,8 +167,8 @@
             <hr>
             <md-button class="md-raised md-primary" ng-click="showCode = !showCode">CodePen</md-button>
             <div ng-show="showCode" class="codepen-wrap">
-                <p data-height="768" data-theme-id="21603" data-slug-hash="jWBaOX" data-default-tab="html" data-user="IvanBisultanov" class='codepen'>See the Pen <a
-                        href='http://codepen.io/IvanBisultanov/pen/jWBaOX'>jWBaOX</a> by IvanBisultanov (<a href='http://codepen.io/IvanBisultanov'>@IvanBisultanov</a>) on <a href='http://codepen.io'>CodePen</a>.
+                <p data-height="768" data-theme-id="21603" data-slug-hash="eJWWpM" data-default-tab="html" data-user="AngularDataGrid" class='codepen'>See the Pen <a
+                        href='http://codepen.io/AngularDataGrid/pen/eJWWpM'>eJWWpM</a> by AngularDataGrid (<a href='http://codepen.io/AngularDataGrid'>@AngularDataGrid</a>) on <a href='http://codepen.io'>CodePen</a>.
                 </p>
                 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
             </div>
