--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -21,7 +21,7 @@
                     <a href="index.html"><strong>Bootstrap Design</strong></a>
                 </li>
                 <li>
-                    <a href="../material/index.html">Material Design</a>
+                    <a href="../material/">Material Design</a>
                 </li>
             </ul>
         </div>
