--- a/demo/material/index.html
+++ b/demo/material/index.html
@@ -24,7 +24,7 @@
                 </md-button>
                 <md-menu-content>
                     <md-menu-item>
-                        <a href="../bootstrap/index.html">Bootstrap Design</a>
+                        <a href="../bootstrap/">Bootstrap Design</a>
                     </md-menu-item>
                     <md-menu-item>
                         <a href="index.html"><strong>Material Design</strong></a>
