changing http to https in JSON urls

--- a/demo/100k/index.html
+++ b/demo/100k/index.html
@@ -21,7 +21,7 @@
     <div>
         <h3>Angular Data Grid 100k Example</h3>
         This demonstrates client-side sorting / pagination / filtering performance of the data grid with <strong>100 000 rows</strong> loaded at once.
-        It's not likely that someone will need to operate so huge data at client side in a real life, but for performance testing purposes it definitely works)
+        It's not likely that someone will need to operate so huge data at client side in real life, but for performance testing purposes it definitely works.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
     <hr>
