search by Name text fix

--- a/demo/100k/index.html
+++ b/demo/100k/index.html
@@ -30,7 +30,7 @@
         <div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="orderIdFilter">Search by User ID</label>
+                    <label for="orderIdFilter">Search by User Name</label>
                     <input id="orderIdFilter" type="text" class="form-control order-search-box"
                            placeholder="Enter User Name"
                            ng-change="gridActions.filter()"
