fixing bootstrap theme right navbar dropdown button issues

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -12,10 +12,10 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <a href="#" class="navbar-brand">Angular Data Grid - Bootstrap Design</a>
-        <div class="btn-group dropdown pull-right p-t-8" uib-dropdown is-open="status.isopen">
-            <a id="single-button" type="button" class="btn btn-info" uib-dropdown-toggle>
+        <div class="navbar-form navbar-right" uib-dropdown>
+            <button id="single-button" type="button" class="btn btn-info" uib-dropdown-toggle>
                 Change Theme <span class="caret"></span>
-            </a>
+            </button>
             <ul class="uib-dropdown-menu" aria-labelledby="simple-dropdown">
                 <li>
                     <a href="index.html"><strong>Bootstrap Design</strong></a>
