--- a/demo/100k/index.html
+++ b/demo/100k/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <a href="#" class="navbar-brand">Angular Data Grid - 100k Example</a>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="../bootstrap/">Main Demo</a></li>
+            <li><a href="../bootstrap/">Back to main demo</a></li>
         </ul>
     </div>
 </nav>
